@@ -1,5 +1,7 @@
 1.2.4
 -Added hkoapi
+-Added data.mergeOptions
+-Added web.Dialog
 
 1.2.3
 -Fixed DateTimeUtil.toString infinity loop
